# ImaginaryCTF-2024-Challenges-Public

./: README.md
Crypto/base64/: README.md
Crypto/coast/: README.md
Crypto/integrity/: README.md
Crypto/lcasm/: README.md  challenge.yaml
Crypto/lf3r/: README.md
Crypto/notitle/: README.md
Crypto/pacap/: README.md
Crypto/solitude/: README.md  challenge.yaml
Crypto/tango/: README.md  challenge.yaml
Forensics/Sleepy Alarm/: flag.txt  readme.md
Forensics/bom/: README.md  flag.txt  gen.py
Forensics/cartesian-1/: README.md  flag.txt
Forensics/cartesian-2/: README.md  flag.txt
Forensics/cartesian-3/: README.md  challenge.yaml
Forensics/crash/: README.md  flag.txt
Forensics/dog-mom/: README.md
Forensics/elf in front of a sunset/: flag.txt  readme.md
Forensics/locked/: README.md  flag.txt
Forensics/packed/: README.md  flag.txt
Forensics/playful-puppy/: README.md  flag.txt
Forensics/routed/: README.md  flag.txt
Misc/bank/: README.md
Misc/calc/: README.md  challenge.yaml
Misc/discord/: README.md
Misc/gdbjail2/: README.md  challenge.yaml
Misc/left_in_the_dark/: README.md  challenge.yaml
Misc/ok-nice/: README.md  challenge.yaml
Misc/sanity-check/: README.md  flag.txt
Misc/starship/: README.md  challenge.yaml
Misc/sussy/: README.md  flag.txt
Misc/zable/: README.md  challenge.yaml  gen_dist.sh
Pwn/bopity/: README.md
Pwn/hopper/: README.md  challenge.yaml
Reversing/oh_a_camel/challenge/src/: .dockerignore  dune-project  generate.py  oh_a_camel.opam  preprocess.sh
Reversing/oh_a_camel/challenge/src/test/: dune
(+251 files in other folders)
